# ai-oip

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: operating-manual.md
docs/architecture/: ADR-0001-tooling-choices.md  ADR-0002-modular-monolith-layering.md  ADR-0003-configuration-management.md  ADR-0004-structured-logging.md  ADR-0005-database-layer.md  ADR-0006-roadmap-v3-agentic-best-practices.md  ADR-0007-prompt-management.md  ADR-0008-agent-framework-and-eval-harness.md  ADR-0009-collector-framework-and-infra-track.md  ADR-0010-walking-skeleton-and-composition-root.md  ADR-0011-workflow-discovery.md  ADR-0012-opportunity-scoring.md  ADR-0013-competition-research.md  ADR-0014-consolidation-prompted-agent-and-stage-context.md  ADR-0015-platform-domain-seam.md  ADR-0016-product-recommendation.md  ADR-0017-roadmap-v4-revenue-first.md  ADR-0018-web-grounded-competition-research.md
migrations/: env.py
migrations/versions/: 0001_create_problems.py  0002_create_workflows.py  0003_create_opportunity_scores.py  0004_create_competition_assessments.py  0005_create_product_recommendations.py  0006_add_competition_sources.py
src/ai_iop/agents/base/: __init__.py  agent.py
src/ai_iop/config/: __init__.py  settings.py
src/ai_iop/core/: __init__.py  exceptions.py
src/ai_iop/logging/: __init__.py  config.py
src/ai_iop/models/: __init__.py
src/ai_iop/monitoring/: __init__.py
src/ai_iop/pipelines/: __init__.py
src/ai_iop/repositories/: __init__.py  base.py
src/ai_oip/: __init__.py
src/ai_oip/agents/: __init__.py  registry.py
src/ai_oip/agents/base/: __init__.py  agent.py  output.py  prompted.py  tracing.py
src/ai_oip/agents/competition_research/: __init__.py  agent.py
src/ai_oip/agents/opportunity_scoring/: __init__.py  agent.py
src/ai_oip/agents/problem_extraction/: __init__.py  agent.py
src/ai_oip/agents/product_recommendation/: __init__.py  agent.py
src/ai_oip/agents/workflow_discovery/: __init__.py  agent.py
src/ai_oip/collectors/: __init__.py  base.py  hackernews.py
src/ai_oip/config/: __init__.py  settings.py
src/ai_oip/core/: exceptions.py
src/ai_oip/evals/: __init__.py  runner.py  targets.py
src/ai_oip/logging/: __init__.py  config.py
src/ai_oip/models/: __init__.py  base.py  competition.py  opportunity.py  problem.py  product_recommendation.py  session.py  workflow.py
src/ai_oip/monitoring/: __init__.py
src/ai_oip/prompts/: __init__.py  loader.py
src/ai_oip/prompts/templates/discover_workflows/: v1.md
src/ai_oip/prompts/templates/discover_workflows/evals/: cases.yaml
src/ai_oip/prompts/templates/extract_problems/: v1.md
src/ai_oip/prompts/templates/extract_problems/evals/: cases.yaml
src/ai_oip/prompts/templates/product_recommendation/: v1.md
src/ai_oip/prompts/templates/product_recommendation/evals/: cases.yaml
src/ai_oip/prompts/templates/research_competition/: v1.md  v2.md
src/ai_oip/prompts/templates/research_competition/evals/: cases.yaml
src/ai_oip/prompts/templates/score_opportunities/: v1.md
src/ai_oip/prompts/templates/score_opportunities/evals/: cases.yaml
src/ai_oip/providers/: __init__.py  anthropic_provider.py  base.py
src/ai_oip/repositories/: __init__.py  base.py  competition_repository.py  opportunity_repository.py  problem_repository.py  product_recommendation_repository.py  sqlalchemy_repository.py  workflow_repository.py
src/ai_oip/runtime/: __init__.py  cli.py  competition.py  composition.py  product_recommendation.py  scoring.py  skeleton.py  workflows.py
src/ai_oip/schemas/: __init__.py  collected_item.py  competition_research.py  opportunity_scoring.py  problem_extraction.py  product_recommendation.py  report.py  workflow_discovery.py
src/ai_oip/services/: __init__.py  competition_research.py  opportunity_scoring.py  problem_discovery.py  product_recommendation.py  report.py  workflow_discovery.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: fakes.py  models.py
tests/fixtures/prompts/demo_greeting/: v1.md  v2.md
tests/fixtures/prompts/demo_greeting/evals/: cases.yaml
tests/integration/: test_postgres_repository.py
tests/unit/: test_agent_framework.py  test_base_agent.py  test_base_repository.py  test_collectors.py  test_competition_research.py  test_config.py  test_eval_runner.py  test_exceptions.py  test_logging.py  test_models_base.py  test_opportunity_scoring.py  test_problem_discovery_service.py  test_problem_extraction_agent.py  test_problem_repository.py  test_product_recommendation.py  test_prompt_loader.py  test_providers.py  test_runtime_skeleton.py  test_session.py  test_sqlalchemy_repository.py  test_workflow_discovery.py
