[project]
name = "ai-iop"
version = "0.0.1"
description = "AI-IOP (AI Opportunity Intelligence Platform): production-grade autonomous AI agent platform."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "import-linter>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_iop"]

# ---- Ruff: lint + format ----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort (import sorting)
    "UP",            # pyupgrade (modern syntax)
    "B",             # bugbear (common bug patterns)
    "SIM",           # simplify
    "ANN",           # require type annotations
    "TID",           # flake8-tidy-imports (used here to ban direct os.environ access)
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.environ".msg = "Read config via ai_iop.config.get_settings(), not os.environ directly."
"os.getenv".msg = "Read config via ai_iop.config.get_settings(), not os.getenv directly."


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # tests don't require full annotation coverage

# ---- mypy: strict type checking ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = ["tests/"]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/ai_iop --cov-report=term-missing"

# ---- import-linter: enforces the layered dependency rules ----
# Lower layers must never import from higher layers. This turns the
# architecture diagram in docs/ into something CI actually checks.
[tool.importlinter]
root_package = "ai_iop"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "ai_iop.pipelines",
    "ai_iop.services",
    "ai_iop.collectors",
    "ai_iop.agents",
    "ai_iop.repositories",
    "ai_iop.models",
    "ai_iop.schemas | ai_iop.prompts",
    "ai_iop.logging | ai_iop.monitoring",
    "ai_iop.config",
    "ai_iop.core",
]

[[tool.importlinter.contracts]]
name = "Agents never import repositories"
type = "forbidden"
source_modules = ["ai_iop.agents"]
forbidden_modules = ["ai_iop.repositories", "ai_iop.models"]
