[project]
name = "ai-oip"
version = "0.0.1"
description = "AI-OIP (AI Opportunity Intelligence Platform): production-grade autonomous AI agent platform."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "anthropic>=0.60",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "import-linter>=2.1",
    "aiosqlite>=0.20",
    "types-pyyaml>=6.0",
]

[project.scripts]
ai-oip-skeleton = "ai_oip.runtime.skeleton:main"
ai-oip-workflows = "ai_oip.runtime.workflows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_oip"]

# ---- Ruff: lint + format ----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort (import sorting)
    "UP",            # pyupgrade (modern syntax)
    "B",             # bugbear (common bug patterns)
    "SIM",           # simplify
    "ANN",           # require type annotations
    "TID",           # flake8-tidy-imports (used here to ban direct os.environ access)
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.environ".msg = "Read config via ai_oip.config.get_settings(), not os.environ directly."
"os.getenv".msg = "Read config via ai_oip.config.get_settings(), not os.getenv directly."


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # tests don't require full annotation coverage
# The integration harness reads its own gate variable directly — it
# deliberately bypasses Settings so a missing variable means "skip",
# never a validation error.
"tests/integration/*" = ["ANN", "TID251"]

# ---- mypy: strict type checking ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = ["tests/"]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: exercises a real Postgres; skipped unless INTEGRATION_DATABASE_URL is set",
]
# Coverage floor lives here, once — CI and local runs both inherit it.
# Ratcheted 80 -> 90 per ADR-0001 addendum 2.
addopts = "--cov=src/ai_oip --cov-report=term-missing --cov-fail-under=90"

# ---- import-linter: enforces the layered dependency rules ----
# Lower layers must never import from higher layers. This turns the
# architecture diagram in docs/ into something CI actually checks.
[tool.importlinter]
root_package = "ai_oip"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "ai_oip.runtime",
    "ai_oip.pipelines",
    "ai_oip.services",
    "ai_oip.collectors | ai_oip.evals",
    "ai_oip.agents",
    "ai_oip.repositories | ai_oip.providers",
    "ai_oip.models",
    "ai_oip.schemas | ai_oip.prompts",
    "ai_oip.logging | ai_oip.monitoring",
    "ai_oip.config",
    "ai_oip.core",
]

[[tool.importlinter.contracts]]
name = "Agents never import repositories"
type = "forbidden"
source_modules = ["ai_oip.agents"]
forbidden_modules = ["ai_oip.repositories", "ai_oip.models"]

# The layers contract alone permits any higher layer to import any lower
# one, so "repositories are the ONLY layer that touches the database"
# needs this explicit forbidden contract for the layers above
# repositories — the layer order can't express it. `ai_oip.runtime` is
# deliberately ABSENT from the sources: it is the composition root, the
# one documented exception allowed to create engines/sessions and wire
# repositories together (ADR-0010, resolving ADR-0002's open question).
# Nothing else may follow that precedent.
[[tool.importlinter.contracts]]
name = "Only repositories access the database layer"
type = "forbidden"
source_modules = [
    "ai_oip.services",
    "ai_oip.pipelines",
    "ai_oip.collectors",
    "ai_oip.providers",
    "ai_oip.evals",
]
forbidden_modules = ["ai_oip.models"]
# Direct imports only: services legitimately reach models *through*
# repositories (that indirection is the whole point of the layer); the
# contract exists to stop them holding the ORM/session directly.
allow_indirect_imports = true
